--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Short stories, French'
 - !lcsh 'Humorous stories'
+- GITenberg
 title: 'Deux et deux font cinq
 
   oeuvres anthumes'
